--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -2,46 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sinopsis_ai.client import SinopsisAI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key = \"test_api_key\"\n",
-    "client = SinopsisAI(api_key=api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error updating conversation in database\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.log_prompt(\"Hello, how can I help you today?\")"
+    "# Import \n",
+    "from sinopsis_ai import SinopsisAI\n",
+    "\n",
+    "# Set your API key\n",
+    "api_key = \"\"\n",
+    "\n",
+    "# Create a new instance of the SinopsisAI class\n",
+    "sinopsis = SinopsisAI(api_key=api_key)\n",
+    "\n",
+    "# Start a new session\n",
+    "session = sinopsis.start_session(user=\"Alex\")\n",
+    "\n",
+    "# Log a user prompt\n",
+    "sinopsis.log_prompt(\"Hello, how are you?\")\n",
+    "\n",
+    "# Log a response from the assistant\n",
+    "sinopsis.log_response(\"I'm good, thanks!\", \"ChatbotName\", \"ModelName\", {\"input\": \"Hello, how are you?\"})\n",
+    "\n",
+    "# End the session\n",
+    "sinopsis.end_session()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
